# timdex-index-manager

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Pipfile  README.md  compose.yaml  pyproject.toml  setup.cfg
.github/: CODEOWNERS  pull-request-template.md
.github/workflows/: dev-build.yml  prod-promote.yml  stage-build.yml
config/: opensearch_mappings.json
tests/: conftest.py  test_cli.py  test_config.py  test_helpers.py  test_opensearch.py
tests/fixtures/: sample_deleted_record_not_present.txt  sample_deleted_records.txt  sample_record_with_errors.json  sample_records.json
tests/fixtures/cassettes/: bulk_index_create_records.yaml  bulk_index_record_with_errors.yaml  bulk_update_embeddings_success.yaml  create_index.yaml  delete_index.yaml  delete_index_not_present.yaml  delete_success.yaml  demote_from_primary_alias_with_confirmation.yaml  demote_from_primary_alias_without_confirmation.yaml  demote_no_aliases_for_index.yaml  demote_no_primary_alias.yaml  get_aliases.yaml  get_aliases_none_present.yaml  get_all_aliased_indexes_for_source.yaml  get_all_aliased_indexes_for_source_mulitple_source_indexes_with_alias.yaml  get_all_aliased_indexes_for_source_no_aliased_indexes_for_source.yaml  get_all_aliased_indexes_for_source_no_aliases.yaml  get_index_aliases.yaml  get_index_aliases_index_not_present.yaml  get_index_aliases_none_present.yaml  get_or_create_index_from_source_new_passed.yaml  get_or_create_index_from_source_no_primary_source_index_present.yaml  get_or_create_index_from_source_primary_index_exists.yaml  get_primary_index_for_source.yaml  get_primary_index_for_source_no_index.yaml  get_primary_index_for_source_no_primary_index.yaml  ingest_all_options.yaml  ingest_no_options.yaml  list_indexes.yaml  list_indexes_none_present.yaml  ping_localhost.yaml  promote_index.yaml  promote_index_demotes_existing.yaml  promote_index_not_present.yaml  promote_index_to_extra_aliases.yaml  promote_index_to_primary_alias.yaml  promote_index_unexpected_error.yaml  remove_alias_index_not_present.yaml  remove_alias_not_associated_with_index.yaml  remove_alias_success.yaml  (+1 more)
tests/fixtures/cassettes/cli/: bulk_delete_with_index_name_success.yaml  bulk_delete_with_source_success.yaml  bulk_index_no_primary_index_for_source.yaml  bulk_index_with_index_name_success.yaml  bulk_index_with_source_success.yaml  create_index_exists.yaml  create_index_success.yaml
tests/fixtures/cassettes/helpers/: bulk_cli_no_primary_index_for_source.yaml  bulk_cli_nonexistent_index.yaml
tests/fixtures/cassettes/opensearch/: bulk_delete_record_weird_response.yaml  bulk_delete_records.yaml  bulk_index_create_records.yaml  bulk_index_record_mapper_parsing_error.yaml  bulk_index_record_other_error.yaml  bulk_index_record_weird_response.yaml  bulk_index_update_records.yaml  bulk_update_raises_bulk_operation_error_if_record_not_found.yaml  bulk_update_updates_records.yaml  create_index_exists.yaml  create_index_other_error.yaml  create_index_success.yaml
tests/fixtures/cassettes/opensearch/TO_DELETE/: bulk_delete_record_not_found.yaml  bulk_index_create_records.yaml  bulk_index_record_mapper_parsing_error.yaml
tests/fixtures/dataset/metadata/: metadata.duckdb
tests/fixtures/dataset/year=2025/month=05/day=07/: libguides-five-records-to-index.parquet  libguides-one-bad-transformed-bad-date.parquet  libguides-one-record-to-delete-not-found.parquet  libguides-one-record-to-delete.parquet
tests/fixures/cassettes/: list_indexes.yaml
tim/: __init__.py  cli.py  config.py  errors.py  helpers.py  opensearch.py
tim/utils/aws/: __init__.py  cloudwatch_metrics.py
(+7 files in other folders)
