[project]
name = "timdex-index-manager"
version = "2.0.0"
requires-python = ">=3.13"
dependencies = [
    "boto3",
    "click",
    "ijson",
    "opensearch-py<3.0",
    "rich-click",
    "sentry-sdk",
    "smart-open[s3]",
    "timdex-dataset-api @ git+https://github.com/MITLibraries/timdex-dataset-api.git",
]

[dependency-groups]
dev = [
    "boto3-stubs",
    "coveralls",
    "freezegun",
    "ipython",
    "mypy",
    "pip-audit",
    "pre-commit",
    "pytest",
    "ruff",
    "vcrpy",
]

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
exclude = ["tests/", "output/"]

[[tool.mypy.overrides]]
module = ["ijson", "smart_open", "timdex_dataset_api"]
ignore_missing_imports = true

[tool.pytest.ini_options]
log_level = "INFO"

[tool.ruff]
target-version = "py313"
line-length = 90
# enumerate all fixed violations
show-fixes = true

[tool.ruff.lint]
select = ["ALL", "PT"]

ignore = [
    # default
    "COM812",
    "D107",
    "N812",
    "PTH",

    # project-specific
    "C90",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "G004",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "S321",
]

# allow autofix behavior for specified rules
fixable = ["E", "F", "I", "Q"]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
    "ANN",
    "ARG001",
    "S101",
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 90

[tool.ruff.lint.pydocstyle]
convention = "google"

[project.scripts]
tim = "tim.cli:main"

[tool.setuptools.packages.find]
include = ["tim*"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true
