[project]
name = "timdex-index-manager"
version = "2.0.0"
requires-python = ">=3.13"
dependencies = [
    "boto3",
    "click",
    "ijson",
    "opensearch-py<3.0",
    "rich-click",
    "sentry-sdk",
    "smart-open[s3]",
    "timdex-dataset-api",
]

[dependency-groups]
dev = [
    "boto3-stubs",
    "coveralls",
    "freezegun",
    "ipython",
    "mypy",
    "pip-audit",
    "pre-commit",
    "pytest",
    "ruff",
    "vcrpy",
]

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
exclude = ["tests/", "output/"]

[[tool.mypy.overrides]]
module = ["ijson", "smart_open", "timdex_dataset_api"]
ignore_missing_imports = true

[tool.pytest.ini_options]
log_level = "INFO"

[tool.ruff]
target-version = "py313"
line-length = 90
# enumerate all fixed violations
show-fixes = true

[tool.ruff.lint]
select = ["ALL", "PT"]

ignore = [
    "C90",
    "COM812",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D107",
    "EM101",
    "EM102",
    "G004",
    "N812",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PTH",
    "S321",
    "TRY003"
]

# allow autofix behavior for specified rules
fixable = ["E", "F", "I", "Q"]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
    "ANN",
    "ARG001",
    "S101",
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 90

[tool.ruff.lint.pydocstyle]
convention = "google"

[project.scripts]
tim = "tim.cli:main"

[tool.setuptools.packages.find]
include = ["tim*"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[tool.uv.sources]
timdex-dataset-api = { git = "https://github.com/MITLibraries/timdex-dataset-api"}
